deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modulo-5
  labels:
    app: nginx
  namespace: diplomado
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 30%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: modulo-5
        image: nginx:1.21
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "128m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - mountPath: /data
          name: modulo-5
        - mountPath: "/etc/foo"
          readOnly: true
          name: secret-file
      volumes:
      - name: secret-file
        secret:
          secretName: mysecret
          optional: true #only for test
      - name: modulo-5
        emptyDir: {}
