ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modulo-5
  namespace: diplomado
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  defaultBackend:
    service:
      name: modulo-5
      port:
        number: 80
  rules:
  - host: testing.docker
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: modulo-5
            port:
              number: 80
